# pabo

./: .gitignore  README.md  justfile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml
docs/: requirements.txt
docs/source/: conf.py
rust/: Cargo.toml
rust/src/: lib.rs
src/pabo/: __init__.py  base.py  bits.py  bytes.py  core.cpp  numbers.py  numeric.py  specify.py  strings.py  wrappers.py
src/pabo/kernels/: core.cpp  pack.hpp  swap.hpp  unpack.hpp
