[metadata]
name = pabo
license = MIT License
license_file = LICENSE
author = "Ujjwal Panda"
long_description = file: README.md
author_email = "ujjwalpanda97@gmail.com"
url = https://github.com/astrogewgaw/pabo
description = "Binary parsing for dummies!"
long_description_content_type = text/markdown

project_urls = 
    Source Code = https://github.com/astrogewgaw/pabo
    Documentation = https://pabo.readthedocs.io/en/latest
    Bug Reports = https://github.com/astrogewgaw/pabo/issues

classifiers =
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find:
package_dir = =src
use_scm_version = True
python_requires = >=3.6
include_package_data = True
setup_requires = setuptools_scm
install_requires = attrs>=20.1.0; numpy>=1.20.0

[options.packages.find]
where=src
